--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -24,7 +24,7 @@ macro( _add_executable name)
   list( APPEND executable_list ${name} )
   # Create the example
   add_executable( ${name} ${name}.cpp )
-  target_link_libraries( ${name} PRIVATE OneStopParallel )
+  target_link_libraries( ${name} PRIVATE OneStopParallel ProjectExecutableFlags )
 endmacro()
 
 
