--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ macro( _add_test name )
   list( APPEND tests_list test_${name} )
   # Create the test
   add_executable(test_${name} ${name}.cpp)
-  target_link_libraries(test_${name} PRIVATE OneStopParallel Boost::unit_test_framework)
+  target_link_libraries(test_${name} PRIVATE OneStopParallel Boost::unit_test_framework ProjectExecutableFlags)
   target_include_directories( test_${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include )
 
   if(ARG_DATA)
