--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,6 +54,8 @@ _add_test( kl_mem_constr )
 
 _add_test( merkle_hash_computer )
 
+_add_test( merkle_hash_divider )
+
 _add_test( hill_climbing )
 
 ## bsp model
