Revert "removed some warnings"
This reverts commit 55be88c76483792539a3d682a328c41b5f6ce0a6.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_subdirectory(.githooks)
 
 add_compile_options(
-    "-DNDEBUG" "-O3"
+    "-DNDEBUG" "-O3" "-Wall" "-Wfatal-errors" "-Wconversion" "-Wsign-conversion" "-Wunused" "-Wunreachable-code" "-Wuninitialized"
 )
 
 # Include directories
