--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,6 +50,8 @@ _add_test( directed_graph_top_sort )
 
 _add_test( kl )
 
+_add_test( kl_v2 )
+
 _add_test( kl_mem_constr )
 
 _add_test( merkle_hash_computer )
