revised node selection strategy
update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,7 +50,9 @@ _add_test( directed_graph_top_sort )
 
 _add_test( kl )
 
-_add_test( kl_v2 )
+_add_test( kl_total )
+
+_add_test( kl_lambda )
 
 _add_test( kl_mem_constr )
 
