--- a/cmake/OneStopParallelConfig.cmake.in
+++ b/cmake/OneStopParallelConfig.cmake.in
@@ -9,6 +9,10 @@
 
 @PACKAGE_INIT@
 
+# Add the directory containing this file to the CMAKE_MODULE_PATH
+# so that find_dependency() can find our custom FindCOPT.cmake module.
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
+
 include(CMakeFindDependencyMacro)
 
 if(@OSP_DEPENDS_ON_OPENMP@)
