--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -60,6 +60,8 @@ _add_test( merkle_hash_computer )
 
 _add_test( merkle_hash_divider )
 
+_add_test( wavefront_component_divider )
+
 _add_test( hill_climbing )
 
 ## bsp model
