refactor OrbitWavefrontProcessor, various smaller changes
update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

update

added test for etfSubgraphScheduler

update

update

update

update

disable merkle_hash_diver test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -64,6 +64,10 @@ _add_test( merkle_hash_computer )
 
 #_add_test( merkle_hash_divider )
 
+_add_test( eft_subgraph_scheduler )
+
+_add_test( wavefront_orbit_processor )
+
 _add_test( wavefront_component_divider )
 
 _add_test( hill_climbing )
